base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2fauth
  labels:
    app.kubernetes.io/name: 2fauth
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: 2fauth
          image: "2fauth/2fauth"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: 2fauth-storage
              mountPath: /2fauth
      volumes:
        - name: 2fauth-storage
          persistentVolumeClaim:
            claimName: 2fauth-storage-pvc
