base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc2fauth
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
